Updated code with new features/fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-Flask
-gunicorn
-requests
-googlesearch-python
-newspaper3k
-nltk
-matplotlib
-lxml_html_clean
+Flask>=2.2.5
+gunicorn>=21.2.0
+requests>=2.31.0
+googlesearch-python>=1.1.0
+newspaper3k>=0.2.8
+nltk>=3.8.1
+matplotlib>=3.8.4
+lxml>=5.2.1
+beautifulsoup4>=4.12.3
+wikipedia-api==0.6.0
+networkx>=3.3
+markupsafe>=2.1.5
